# naggy

./: .envrc  .ghci  .travis.yml  Makefile  README.md  config.nix  default.nix  dependent-sum-template.nix  dependent-sum.nix  lens-properties.nix  naggy.cabal  naggy.sd.yml  pg.sql  postgresql-simple-migration.nix  react-flux.nix  reflex-dom.nix  reflex.nix  release.nix  tasty-ant-xml.nix  uri-bytestring.nix
hipbot/: default.nix  hipbot.cabal  shell.nix
hipbot/src/: HipBot.hs
hipbot/src/HipBot/: API.hs  Card.hs  Descriptor.hs  Http.hs  Types.hs
hipbot/src/HipBot/API/: PG.hs  STM.hs
hipbot/src/HipBot/Descriptor/: APIConsumer.hs  AddOn.hs  Capabilities.hs  Configurable.hs  Dialog.hs  Glance.hs  Icon.hs  Installable.hs  Key.hs  Lenses.hs  Links.hs  Name.hs  OAuth2Provider.hs  WebPanel.hs  Webhook.hs
hipbot/src/HipBot/Http/: Auth.hs
hipbot/src/HipBot/Internal/: HipBot.hs  JSON.hs  OAuth.hs  URIRefOrphans.hs
js/: naggy.js
purs/: bower.json  build.sh
purs/src/: Naggy.purs
purs/src/Naggy/: Ajax.purs  Form.purs  List.purs  Types.purs
purs/src/Naggy/Form/: AUI.purs  MessageField.purs  RepeatingField.purs  TimeField.purs
src/HipBot/: Naggy.hs
src/HipBot/Naggy/: API.hs  ConfigPage.hs  Descriptor.hs  Resources.hs  Scheduling.hs  Session.hs  Types.hs
ui/: .envrc  bower.json  default.nix  naggy-ui.cabal  naggy.html  shell.nix
ui/src/: Main.hs  TZFFI.hs  Types.hs
webapp/: Main.hs  default.nix  naggy.cabal  shell.nix
webapp/src/HipBot/: Naggy.hs
webapp/src/HipBot/Naggy/: API.hs  Config.hs  ConfigHtml.hs  Descriptor.hs  Env.hs  RequestLogger.hs  Scheduling.hs  Types.hs
webapp/src/HipBot/Naggy/API/: PG.hs  STM.hs
