name:               naggy
version:            0.1
license:            BSD3
license-file:       LICENSE
author:             Richard Wallace <rwallace@atlassian.com>
maintainer:         Richard Wallace <rwallace@atlassian.com>
copyright:          (c) 2015 Richard Wallace
synopsis:           A HipChat Reminder Bot
description:        A HipChat Reminder Bot
category:           Web
homepage:           https://bitbucket.org/rwallace/naggy
bug-reports:        https://bitbucket.org/rwallace/naggy/issues
cabal-version:      >= 1.8
build-type:         Simple

data-files:         js/naggy.js

extra-source-files:
  .ghci
  .gitignore
  .travis.yml
  HLint.hs
  LICENSE
  README.md
  pg.sql

source-repository   head
  type:             git
  location:         https://github.com/purefn/naggy.git

executable naggy
  ghc-options:      -Wall

  hs-source-dirs:   src

  main-is:          HipBot/Naggy.hs

  other-modules:    HipBot.Naggy.API
                  , HipBot.Naggy.ConfigPage
                  , HipBot.Naggy.Descriptor
                  , HipBot.Naggy.Resources
                  , HipBot.Naggy.Scheduling
                  , HipBot.Naggy.Session
                  , HipBot.Naggy.Types

  build-depends:    base                            >=4.6 && <5
                  , aeson                           >=0.7.0.3 && <1
                  , bifunctors                      >=3.0 && <5
                  , blaze-builder                   >=0.2.1.4 && <0.4
                  , bytestring                      >=0.9.1.10 && <0.11
                  , cereal                          >=0.1 && <1
                  , clientsession                   >=0.8 && <1
                  , containers                      >=0.4.0 && <0.6
                  , cookie                          >=0.4 && <1
                  , exceptions                      >=0.1.1 && <1
                  , hipbot                          >=0.3 && <1
                  , lens                            >=4.5 && <5
                  , lens-datetime                   >=0.2 && <1
                  , lucid                           >=2.0 && <3
                  , mtl                             >=2.0.1 && <2.3
                  , postgresql-simple               >=0.4 && <1
                  , safe                            >=0.2 && <1
                  , stm                             >=2.3 && <3
                  , time                            >=1.4 && <2
                  , text                            >=0.11 && <1.3
                  , transformers                    >=0.2 && <0.5
                  , tz                              >=0.0.0.3 && <1
                  , unordered-containers            ==0.2.*
                  , utf8-string                     >=0.3.1 && <1.1
                  , uuid                            >=1.2.6 && <2
                  , vector                          >=0.3 && <1
                  , wai                             >=3.0 && <4
                  , wai-extra                       >=3.0 && <4
                  , wai-lens                        >=0.1 && <1
                  , warp                            >=3.0 && <4
                  , webcrank-wai                    >=0.2 && <1

